# Lang-Chain-From-Zero-To-Hero

./: 1_GenerativeAI_RoadMap.md  2_GenerativeAIUsingLangChain.md  3_IntroductionToLangChain.md  4_LangChainComponents.md  5_LangChainModels.md  README.md  pyproject.toml  requirements.txt
10_VertorStore/: VectorStore.md  VectorStoreChroma.py
10_VertorStore/my_chroma_db/: chroma.sqlite3
11_Retrievers/: ContextualCompressionRetriever.py  MaximumMarginalRelevanceRetriever.py  MultiQueryRetriever.py  Retrievers.md  VectorStoreRetriever.py  WikipediaRetriever.py
12_Tools/: BuiltInTools.py  CustomTools.py  ToolCreationBindingCallingExecution.py  Tools.md
1_Models/: LangChainModelsComponent.md
2_Prompts/: ChatBot.py  ChatPromptTemplate.py  LangChainPromptsComponent.md  MessagePlaceholder.py  PromptUI.py  Prompt_Generator.py  messages.py
3_StructuredOutput/: JsonSchema.py  JsonSchema_Demo.json  Pydantic.py  Pydantic_Demo.py  StructuredOutput.md  TypedDict.py  TypedDict_Demo.py
4_OutputParser/: JsonOutputParser.py  OutputParser.md  PydanticOutputParser.py  StringOutputParser.py  StructuredOutputParser.py
5_Chains/: Chains.md  ConditionalChain.py  ParallelChain.py  SequentialChain.py  SimpleChain.py
6_Runnables/: RunnableBranch.py  RunnableLambda.py  RunnableParallel.py  RunnablePassthrough.py  RunnableSequence.py  Runnables.md
7_RAG/: RAG.md
8_DocumentLoaders/: DirectoryLoader.py  DocumentLoaders.md  PDFLoader.py  TextLoader.py  WebBaseLoader.py
9_TextSplitters/: LengthBased.py  TextSplitters.md
(+12 files in other folders)
